spacing issues and colors

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -31,7 +31,7 @@
     height:120px;
     background-color: rgba(56, 197, 243, .75);
     position:fixed;
-    margin-top:-10em;
+    margin-top:-20em;
   }
   .mobile-nav  {
     list-style-type: none; /*to remove bullets*/
